Fixed stretching images on landing page

--- a/src/overrides/assets/stylesheets/home/layout/parallax/_spotlight.scss
+++ b/src/overrides/assets/stylesheets/home/layout/parallax/_spotlight.scss
@@ -79,6 +79,7 @@
       display: block;
       width: px2rem(500px);
       max-width: 100%;
+      height: auto;
       border-radius: px2rem(4px);
       box-shadow: var(--md-shadow-z2);
       transition:
