--- a/src/overrides/assets/stylesheets/home/layout/parallax/_users.scss
+++ b/src/overrides/assets/stylesheets/home/layout/parallax/_users.scss
@@ -54,6 +54,7 @@
     // Testimonial image
     img {
       width: px2rem(200px);
+      height: auto;
       margin-inline: auto;
       border-radius: px2rem(100px);
       transition:
